--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,16 @@
 <head>
   <title>Labelmaker</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  
   <%= csrf_meta_tags %>
 </head>
 <body>
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<%= render 'layouts/header' %>
+<div class="container">
 <%= yield %>
+</div>
 
 </body>
 </html>
