--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,14 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <%= render 'layouts/header' %>
+
 <div class="container">
+
+
+<% flash.each do |name, msg| %>
+     <%= content_tag(:div, msg, class: "alert alert-info") %>
+<% end %>
+
 <%= yield %>
 </div>
 
