--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,3 @@
-
 <nav class="navbar navbar-default" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
@@ -17,13 +16,11 @@
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "Create", root_path %></li> 
       <% if user_signed_in? %>
-          <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+         <li><%= link_to "Log out", destroy_user_session_path, :method => :delete %></li>
+
         <% else %>
           <li><%= link_to "Sign in", new_user_session_path %></li>
         <% end %>
     </ul>
   </div><!-- /.navbar-collapse -->
 </nav>
-
-
-
