--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,13 +1,13 @@
-@import 'bootstrap';
+
 @import url(http://fonts.googleapis.com/css?family=Lato:400,700);
 
-$body-bg:                                                   #ecf0f1;
+$body-bg:                               white;
 $font-family-sans-serif:                'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $navbar-height:                                        45px;
-$navbar-default-bg:                          white;
+$navbar-default-bg:                      white;
 
-$brand-primary:                                    #c0392b;
-$jumbotron-bg:                                         white;
+$brand-primary:                          #c0392b;
+$jumbotron-bg:                             white;
 
 @import 'bootstrap';
 
@@ -18,3 +18,4 @@ $jumbotron-bg:                                         white;
 .navbar-brand {
      font-weight: bold;
 }
+
