added pdf via prawn for individual labels and several form fields

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -8,8 +8,15 @@ $navbar-default-bg:                      white;
 
 $brand-primary:                          #c0392b;
 $jumbotron-bg:                             white;
+$badge-bg:							 	 #f1c40f;
+$badge-color:							   black;
+
+
+
+
 
 @import 'bootstrap';
+@import 'bootstrap-datetimepicker';
 
 .center {
      text-align: center;
