--- a/app/views/labels/index.html.erb
+++ b/app/views/labels/index.html.erb
@@ -35,15 +35,21 @@
 <div id="labels">
   <% @labels.each do |label| %>
     <div class="panel panel-default">
-      <div class="panel-heading"><%= label.number %></div>
+      <div class="panel-heading"><%= label.number %> <span class="badge pull-right">new</span></div>
       <div class="panel-body">
       <%= label.barcode_data.html_safe %>
       <br>
       <%= label.number %>
+     
       <br>
       <%= link_to 'Show', label %>
       <%= link_to 'Edit', edit_label_path(label) %>
       <%= link_to 'Destroy', label, method: :delete, data: { confirm: 'Are you sure?' } %>
+      
+      <label class="checkbox-inline pull-right">
+          <input type="checkbox" id="inlineCheckbox1" value="option1"> Include  
+      </label>
+      
       </div>
       </div>
       <% end %>
@@ -51,6 +57,6 @@
     </div>
   </div>
 
-  
+
 </div>
 
