--- a/app/views/labels/_form.html.erb
+++ b/app/views/labels/_form.html.erb
@@ -1,4 +1,6 @@
-<%= form_for(@label) do |f| %>
+
+
+<%= form_for(@label, html: { multipart: true }) do |f| %>
   <% if @label.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@label.errors.count, "error") %> prohibited this label from being saved:</h2>
@@ -12,10 +14,75 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :number %><br>
+    <h4><%= f.label :number %></h4>
     <%= f.text_field :number %>
   </div>
+
+<!--  
+<div class="field">
+<h4><b>Build Method</b></h4>
+  
+
+  <div class="btn-group">
+    <button type="button" class="btn btn-default">Polyjet
+      <% f.label :Polyjet %><br>
+      <% f.check_box :technology %> 
+    </button>
+  <button type="button" class="btn btn-default">FDM
+      <% f.label :fdm %><br>
+      <% f.check_box :technology %> 
+  </button>
+  <button type="button" class="btn btn-default">SLS
+      <% f.label :sls %><br>
+      <% f.check_box :technology %> 
+  </button>
+  <button type="button" class="btn btn-default">Casting
+      <% f.label :casting %><br>
+      <% f.check_box :technology %> 
+  </button>
+  <button type="button" class="btn btn-default">Injection Molding
+      <% f.label :injection_molding %><br>
+      <% f.check_box :technology %> 
+  </button>
+  <button type="button" class="btn btn-default">Other
+      <% f.label :other %><br>
+      <% f.check_box :technology %> 
+  </button>
+</div>
+<p></p>
+</div>
+-->
+<div class="field">
+<h4><b>Build Method</b></h4>
+   <h4><% f.label :technology %></h4>
+    <%= f.text_field :technology %>
+
+</div>
+
+<div class="field">
+    <h4><%= f.label :customer %></h4>
+    <%= f.text_field :customer %>
+  </div>
+
+<h4><b>Due Date</b></h4>  
+<div class="field">
+    <h4><% f.label :duedate %></h4>
+    <%= f.text_field :duedate %>
+  </div>
+<h4><b>Shipping/Pickup/Courier Method</b></h4>
+  <div class="field">
+    <h4><% f.label :shippingmethod %></h4>
+    <%= f.text_field :shippingmethod %>
+  </div>
+<h4><b>Build Location</b></h4>
+  <div class="field">
+    <h4><% f.label :buildlocation %></h4>
+    <%= f.text_field :buildlocation %>
+  </div>
+
+<p></p>
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
+
